# CryptoTracker_Telegram

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cryptotracker_telegram.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: .gitkeep
docs/: .gitkeep
examples/: __init__.py  advanced_usage.py  basic_usage.py
src/crypto_tracker/: __init__.py  __main__.py  chart.py  cli.py  config.py  database.py  logger.py  telegram.py  tracker.py
tests/: __init__.py  conftest.py  test_config.py  test_tracker.py
